# mhw_booklet

./: .editorconfig  .gitignore  AilmentStack.py  Booklet.py  Card.py  README.md  SConfig.py  WeaknessStack.py  data.json  hlp.py  main.py  pyproject.toml  setup.cfg
assets/: data.json
python_environment/: pip-selfcheck.json
python_environment/Scripts/: activate  activate.bat
src/: ailment_stack.py  booklet.py  colors.py  config.py  element_weakness_stack.py  helper.py  images.py  library.py  logging.py  monster_card.py  types.py
